Wrap server group name strings in their own Type (#5541)
* Wrap server group name strings in their own Type

* Changing ServerGroupName collection builder method names