@@ -5,6 +5,7 @@
  */
 package com.neo4j.causalclustering.upstream.strategies;
 
+import com.neo4j.causalclustering.core.ServerGroupName;
 import com.neo4j.causalclustering.discovery.FakeTopologyService;
 import com.neo4j.causalclustering.discovery.TopologyService;
 import com.neo4j.causalclustering.identity.MemberId;
@@ -12,7 +13,6 @@ import org.junit.jupiter.api.Test;
 
 import java.util.Collections;
 import java.util.HashSet;
-import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
@@ -26,7 +26,6 @@ import static co.unruly.matchers.OptionalMatchers.contains;
 import static co.unruly.matchers.OptionalMatchers.empty;
 import static com.neo4j.causalclustering.discovery.FakeTopologyService.memberId;
 import static java.util.Collections.singleton;
-import static java.util.Collections.singletonList;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.in;
 import static org.hamcrest.Matchers.is;
@@ -39,10 +38,11 @@ class ConnectRandomlyToServerGroupStrategyImplTest
     void shouldStayWithinGivenSingleServerGroup()
     {
         // given
-        final List<String> myServerGroup = List.of( "my_server_group" );
+        final var myServerGroup = ServerGroupName.setOf( "my_server_group" );
 
         Set<MemberId> myGroupMemberIds = FakeTopologyService.memberIds( 0, 10 );
-        TopologyService topologyService = getTopologyService( myServerGroup, myGroupMemberIds, List.of( "your_server_group" ), Set.of( DATABASE_ID ) );
+        var topologyService =
+                getTopologyService( myServerGroup, myGroupMemberIds, ServerGroupName.setOf( "your_server_group" ), Set.of( DATABASE_ID ) );
 
         ConnectRandomlyToServerGroupImpl strategy = new ConnectRandomlyToServerGroupImpl( myServerGroup, topologyService, memberId( 0 ) );
 
@@ -57,10 +57,10 @@ class ConnectRandomlyToServerGroupStrategyImplTest
     void shouldSelectAnyFromMultipleServerGroups()
     {
         // given
-        final List<String> myServerGroups = List.of( "a", "b", "c" );
+        final var myServerGroups = ServerGroupName.setOf( "a", "b", "c" );
 
         Set<MemberId> myGroupMemberIds = FakeTopologyService.memberIds( 0, 10 );
-        TopologyService topologyService = getTopologyService( myServerGroups, myGroupMemberIds, List.of( "x", "y", "z" ), Set.of( DATABASE_ID ));
+        var topologyService = getTopologyService( myServerGroups, myGroupMemberIds, ServerGroupName.setOf( "x", "y", "z" ), Set.of( DATABASE_ID ) );
 
         ConnectRandomlyToServerGroupImpl strategy = new ConnectRandomlyToServerGroupImpl( myServerGroups, topologyService, memberId( 0 ) );
 
@@ -76,9 +76,10 @@ class ConnectRandomlyToServerGroupStrategyImplTest
     {
         // given
         Set<MemberId> myGroupMemberIds = FakeTopologyService.memberIds( 0, 10 );
-        TopologyService topologyService =
-                getTopologyService( singletonList( "my_server_group" ), myGroupMemberIds, List.of( "x", "y", "z" ), Set.of( DATABASE_ID ) );
-        ConnectRandomlyToServerGroupImpl strategy = new ConnectRandomlyToServerGroupImpl( Collections.emptyList(), topologyService, null );
+        var topologyService =
+                getTopologyService( ServerGroupName.setOf( "my_server_group" ), myGroupMemberIds, ServerGroupName.setOf( "x", "y", "z" ),
+                        Set.of( DATABASE_ID ) );
+        ConnectRandomlyToServerGroupImpl strategy = new ConnectRandomlyToServerGroupImpl( Collections.emptySet(), topologyService, null );
 
         // when
         Optional<MemberId> memberId = strategy.upstreamMemberForDatabase( DATABASE_ID );
@@ -91,10 +92,10 @@ class ConnectRandomlyToServerGroupStrategyImplTest
     void shouldReturnEmptyIfGroupOnlyContainsSelf()
     {
         // given
-        final List<String> myServerGroup = List.of( "group" );
+        final var myServerGroup = ServerGroupName.setOf( "group" );
 
         var myGroupMemberIds = singleton( memberId( 0 ) );
-        TopologyService topologyService = getTopologyService( myServerGroup, myGroupMemberIds, List.of( "x", "y", "z" ), Set.of( DATABASE_ID ) );
+        var topologyService = getTopologyService( myServerGroup, myGroupMemberIds, ServerGroupName.setOf( "x", "y", "z" ), Set.of( DATABASE_ID ) );
 
         ConnectRandomlyToServerGroupImpl strategy = new ConnectRandomlyToServerGroupImpl( myServerGroup, topologyService, memberId( 0 ) );
 
@@ -105,20 +106,17 @@ class ConnectRandomlyToServerGroupStrategyImplTest
         assertThat( memberId, empty() );
     }
 
-    static TopologyService getTopologyService( List<String> myServerGroups, Set<MemberId> myGroupMemberIds, List<String> unwanted,
+    static TopologyService getTopologyService( Set<ServerGroupName> myServerGroups, Set<MemberId> myGroupMemberIds, Set<ServerGroupName> unwanted,
             Set<NamedDatabaseId> namedDatabaseIds )
     {
-        var thisCore =  memberId( -1 );
+        var thisCore = memberId( -1 );
 
-        var otherReplicas = Stream.generate( UUID::randomUUID )
-                .map( MemberId::new )
-                .limit( 10 )
-                .collect( Collectors.toSet() );
+        var otherReplicas = Stream.generate( UUID::randomUUID ).map( MemberId::new ).limit( 10 ).collect( Collectors.toSet() );
 
         var allReplicas = new HashSet<>( myGroupMemberIds );
         allReplicas.addAll( otherReplicas );
 
-        var topologyService =  new FakeTopologyService( singleton( thisCore ), allReplicas, thisCore, namedDatabaseIds );
+        var topologyService = new FakeTopologyService( singleton( thisCore ), allReplicas, thisCore, namedDatabaseIds );
 
         topologyService.setGroups( myGroupMemberIds, Set.copyOf( myServerGroups ) );
         topologyService.setGroups( otherReplicas, Set.copyOf( unwanted ) );
